--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
                 <h4>This page aimed to satisfy the requirements for our CEN4010 class namely Project Milestones.</h4><hr>
                 <h5 align=left>Team Members: </h5><br>
                 <div class="row">
-                    <div class="column-3">
+                    <div class="column">
                         <img src="images/thiago.JPG" alt="HTML5 Icon" style="width:150px;height:200px;">
                         <a href="http://lamp.cse.fau.edu/~tdemendonca2017/index.html"><br>Thiago De Mendonca</a>
                         <a href="https://github.com/ThiagoM728"><br>GitHub</a>
                     </div>
-                    <div class="column-3">
+                    <div class="column">
                         <img src="images/Will.jpg" alt="HTML5 Icon" style="width:200px;height:200px;">
                         <a href="http://lamp.cse.fau.edu/~wtring2014/hw2"><br>William Tring</a>
                         <a href="https://github.com/wtring2014"><br>GitHub</a>
                     </div>
-                    <div class="column-3">
+                    <div class="column">
                         Roberto Beltran
                     </div>
-                    <div class="column-3">
+                    <div class="column">
                         Piotr Skipor
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                 Name: Team_11
                 <a href="https://github.com/cen4010-s2018-g11/Team_11"><br>Link</a>
 
-            </div>
+            </div></div>
             <!-- /.container -->
 
 
