--- a/index.html
+++ b/index.html
@@ -49,31 +49,35 @@
             <div class="starter-template">
                 <h1>About Us</h1><hr>
                 <h4>This page aimed to satisfy the requirements for our CEN4010 class namely Project Milestones.</h4><hr>
-                <h5 align=left>Team Members: </h5><br>
+                <h5 align=center>Team Members: </h5><br>
                 <div class="row">
-                    <div class="column">
-                        <img src="images/thiago.JPG" alt="HTML5 Icon" style="width:150px;height:200px;">
+                    <div class="col-sm-3">
+                        <img src="images/thiago.JPG" alt="HTML5 Icon" style="width:200px;height:200px;">
                         <a href="http://lamp.cse.fau.edu/~tdemendonca2017/index.html"><br>Thiago De Mendonca</a>
                         <a href="https://github.com/ThiagoM728"><br>GitHub</a>
                     </div>
-                    <div class="column">
+                    <div class="col-sm-3">
                         <img src="images/Will.jpg" alt="HTML5 Icon" style="width:200px;height:200px;">
                         <a href="http://lamp.cse.fau.edu/~wtring2014/hw2"><br>William Tring</a>
                         <a href="https://github.com/wtring2014"><br>GitHub</a>
                     </div>
-                    <div class="column">
-                        Roberto Beltran
+                    <div class="col-sm-3">
+                        <img src="images/roberto.JPG" alt="HTML5 Icon" style="width:200px;height:200px;">
+                        <a href="http://lamp.cse.fau.edu/~rbeltra3"><br>Roberto Beltran</a>
+                        <a href="https://github.com/rbeltran37"><br>GitHub</a>
                     </div>
-                    <div class="column">
-                        Piotr Skipor
+                     <div class="col-sm-3">
+                        <img src="images/piotr.JPG" alt="HTML5 Icon" style="width:200px;height:200px;">
+                        <a href="http://lamp.cse.fau.edu/~pskipor2013/p1/index.html"><br>Piotr Skipor</a>
+                        <a href="https://github.com/pskipor74"><br>GitHub</a>
                     </div>
-                </div>
+                </div><br><hr>
                 <b>Team's Trello info:</b><br>
                 Name: CEN 4010 Milestone Group 11
                 <a href="https://trello.com/cen4010milestonegroup11"><br>Link</a><br><hr>
                 <b>Team's GitHub info:</b><br>
                 Name: Team_11
-                <a href="https://github.com/cen4010-s2018-g11/Team_11"><br>Link</a>
+                <a href="https://github.com/cen4010-s2018-g11/Team_11"><br>Link</a><hr>
 
             </div></div>
             <!-- /.container -->
@@ -90,7 +94,6 @@
             <script>
                 (function() {
                     'use strict'
-
                     if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
                         var msViewportStyle = document.createElement('style')
                         msViewportStyle.appendChild(
@@ -100,7 +103,6 @@
                         )
                         document.head.appendChild(msViewportStyle)
                     }
-
                 }())
             </script>
 
